# Forecasting-Energy-Consumption-Base-Model

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/: SECURITY.md
.github/workflows/: bandit.yml  ci.yml  scorecard.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: cross_validation.ipynb  cross_validation_range_of_values.ipynb
src/energy_forecast/: __init__.py  compare_models.py  config.py  evaluate_submission.py  exceptions.py  make_submission.py  train_model.py
src/energy_forecast/compliance/: __init__.py  model_card.py
src/energy_forecast/data/: __init__.py  fetch.py  openmeteo.py  preprocess.py  weather.py
src/energy_forecast/evaluation/: __init__.py  metrics.py
src/energy_forecast/models/: __init__.py  baseline.py  persistence.py
tests/: conftest.py  test_fetch.py  test_make_submission.py  test_model_card.py  test_models.py  test_openmeteo.py  test_persistence.py  test_preprocess.py  test_train_model.py  test_weather.py
